--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "OpenCV binding for recat-native",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./download_opencv_native.sh"
   },
   "repository": {
     "type": "git",
