add missing file

--- a/android/libraries/opencv/build.gradle
+++ b/android/libraries/opencv/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    //buildToolsVersion "27.0.3" // not needed since com.android.tools.build:gradle:3.0.0
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 27
+        minSdkVersion 14
+        targetSdkVersion 21
     }
 
     buildTypes {
