--- a/android/libraries/opencv/build.gradle
+++ b/android/libraries/opencv/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 27
-    //buildToolsVersion "27.0.3" // not needed since com.android.tools.build:gradle:3.0.0
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 21
+        minSdkVersion 16
+        targetSdkVersion 27
     }
 
     buildTypes {
