--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     {
       "name": "Allen Ng",
       "email": "allen.ng@pickupp.io"
+    },{
+      "name": "Lawrence Ho",
+      "email": "lawrence.ho@pickupp.io"
     }
   ],
   "license": "MIT",
