--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       "email": "allen.ng@pickupp.io"
     },{
       "name": "Lawrence Ho",
-      "email": "lawrence.ho@pickupp.io"
+      "email": "clong@pickupp.io"
     }
   ],
   "license": "MIT",
