--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ gradle/
 android/libraries/opencv/src/main/java
 android/libraries/opencv/src/main/res
 android/libraries/opencv/src/main/AndroidManifest.xml
+.settings
