--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "OpenCV binding for recat-native",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./download_opencv_sdk.sh"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
